fixed css and post visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -577,10 +577,16 @@ textarea {
   font-size: 0.8rem;
   padding: 2px 6px;
 
-  background: #991b1b;
-  color: white;
+  background: var(--zinc-200);
+  color: black;
   border-radius: 4px;
 }
+
+.tag-taken-down {
+  color: white;
+  background-color: #991b1b;
+}
+
 
 .auth-wrapper {
   max-width: 400px;
@@ -1087,6 +1093,19 @@ textarea {
 
 .badge-public {
   display: none;
+}
+
+.badge-private {
+  position: absolute;
+  top: 12px;
+  right: 23px;
+  background-color: var(--zinc-50);
+  color: black;
+  font-family: var(--font-mono);
+  font-size: 0.65rem;
+  padding: 4px 8px;
+  border-radius: 4px;
+  text-transform: uppercase;
 }
 
 .admin-card-header {
